<resources>
    <string name="app_name">MovieDB</string>
    <string name="search">Search</string>
    <string name="movie_cover">Movie Cover</string>
    <string name="favorite">Favorite</string>
    <string name="release_date_textView">Release date</string>
    <string name="error">App error!</string>
    <string name="release_date">Release date </string>
    <string name="reload">Reload</string>
    <string name="tagline">She created it. He sold it. And they bought it.</string>
    <string name="splash_title">The Movie Database</string>
    <string name="splash_subtitle">by Mirjana Kopanja</string>
    <string name="about">About</string>
    <string name="about_this_app">About This App</string>
    <string name="about_text">This app is build for Android project at GeekBrains by Mail.ru Please feel free to contact me for any suggestions and changes. Thank you</string>
    <string name="contact_me">Contact me</string>
    <string name="genre">Genre</string>
    <string name="date">15-03-2003</string>
    <string name="genre_icon">Genre Icon</string>
    <string name="release_date_icon">Release Date Icon</string>
    <string name="subtitle">A young woman, traumatized by a tragic event in her past, seeks out vengeance against those who crossed her path.</string>
    <string name="overview">Overview</string>
    <string name="settings">Settings</string>
    <string name="adult">Show Adult Content</string>
    <string name="your_notes">Your Notes</string>
    <string name="enter_your_note_here">Enter your note here</string>
    <string name="save_note">Save Note</string>
    <string name="add_note_here">Add note here</string>
    <string name="maps">Map</string>
    <string name="cast">Cast</string>
    <string name="cast_avatar">Cast Avatar</string>
    <string name="actor_photo">Actor Photo</string>
    <string name="birthday">Birthday</string>
    <string name="place_of_birth">Place Of Birth</string>
    <string name="address_line">Address line</string>
    <string name="please_enter_city_name">Please enter city name</string>
    <string name="home">Home</string>
    <string name="type_movie_name_here">Type movie name here...</string>
    <string name="upcoming">Upcoming</string>
    <string name="popular">Popular</string>
    <string name="popularShows">Popular Tv Shows</string>
    <string name="now_playing">Now Playing</string>
    <string name="transition">actorTransition</string>
    <string name="transitionMain">mainFragmentTransition</string>
    <string name="shows">Tv Shows</string>
    <string name="seasons">Seasons</string>
    <string name="tv_show_title">Tv Show Title</string>
    <string name="video_trailer_button">Video Trailer Button</string>
    <string name="bookmark_icon">Bookmark icon</string>

</resources>