<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:id="@+id/actorPhotoCard"
        android:layout_width="@dimen/actor_avatar"
        android:layout_height="@dimen/actor_avatar"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardElevation="0dp"
        app:cardCornerRadius="75dp"
        android:layout_marginTop="@dimen/margin_sixteen"
        android:layout_marginStart="@dimen/margin_eight"
        android:layout_marginEnd="@dimen/margin_eight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:id="@+id/actorPhoto"
        android:layout_width="@dimen/actor_avatar"
        android:layout_height="@dimen/actor_avatar"
        tools:src="@tools:sample/avatars"
        android:scaleType="centerCrop"
        android:transitionName="@string/transition"
        android:contentDescription="@string/actor_photo" />

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/actorName"
        style="@style/TextAppearance.MaterialComponents.Overline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_sixteen"
        android:textSize="@dimen/desc_text_size"
        android:layout_marginStart="@dimen/margin_sixteen"
        android:layout_marginEnd="@dimen/margin_sixteen"
        app:layout_constraintTop_toBottomOf="@id/actorPhotoCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        tools:text="Edward Norton"/>

    <TextView
        android:id="@+id/actorBirthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/birthday"
        android:drawablePadding="6dp"
        style="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle"
        app:layout_constraintTop_toBottomOf="@id/actorName"
        android:layout_marginTop="@dimen/section25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:drawableStartCompat="@drawable/ic_baseline_calendar_today_24" />


    <TextView
        android:id="@+id/placeOfBirth"
        tools:text="@string/place_of_birth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_eight"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actorBirthday"
        app:drawableStartCompat="@drawable/ic_baseline_place_24" />

    <TextView
        android:id="@+id/actorBio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/placeOfBirth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/about_text"
        style="@style/TextAppearance.MaterialComponents.Overline"
        android:layout_marginTop="@dimen/margin_sixteen"
        android:layout_marginStart="@dimen/margin_sixteen"
        android:layout_marginEnd="@dimen/margin_sixteen"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>