<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sectionA"
            android:layout_marginTop="@dimen/margin_sixteen"
            android:layout_marginStart="@dimen/six"
            android:layout_marginEnd="@dimen/six"
            android:layout_marginBottom="@dimen/six"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.cardview.widget.CardView
                app:cardCornerRadius="@dimen/margin_sixteen"
                android:elevation="0dp"
                android:outlineAmbientShadowColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:visibility="visible"
                    android:id="@+id/showImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/movie_cover"
                    tools:src="@drawable/ic_movie_yellow"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <ImageView
                    android:id="@+id/button_bookmark"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="@dimen/ten"
                    android:layout_marginTop="@dimen/ten"
                    android:layout_marginEnd="@dimen/ten"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_bookmark"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:contentDescription="@string/bookmark_icon" />

            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:visibility="visible"
                    android:id="@+id/showDescriptionSection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/showTitleTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="Gone Girl"
                        android:textAllCaps="true"
                        android:layout_marginTop="@dimen/margin_sixteen"
                        android:layout_marginStart="@dimen/margin_eight"
                        android:paddingBottom="@dimen/desc_text_size"
                        android:textSize="30sp"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/showTaglineTextView"
                        android:layout_width="match_parent"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
                        android:layout_height="wrap_content"
                        tools:text="@string/tagline"
                        android:layout_marginStart="@dimen/margin_eight"
                        android:layout_marginBottom="@dimen/margin_sixteen"
                        android:textAllCaps="true"
                        android:paddingBottom="@dimen/margin_sixteen"
                        android:textStyle="bold|italic"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.1dp"
                        android:background="@android:color/darker_gray"/>

                    <TableLayout
                        android:id="@+id/table"
                        android:weightSum="2"
                        android:layout_width="match_parent"
                        android:layout_marginTop="@dimen/margin_sixteen"
                        android:layout_height="wrap_content">

                        <TableRow
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:weightSum="3"
                            android:gravity="center_horizontal">

                            <ImageView
                                android:id="@+id/releaseDateTitle"
                                android:textAlignment="center"
                                android:textStyle="bold"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="30dp"
                                android:src="@drawable/ic_event"
                                android:layout_marginBottom="@dimen/four"
                                android:contentDescription="@string/release_date_icon" />

                            <ImageView
                                android:id="@+id/genreTextView"
                                android:textAlignment="center"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="match_parent"
                                android:src="@drawable/ic_movie"
                                android:layout_marginBottom="@dimen/four"
                                android:contentDescription="@string/genre_icon" />

                            <ImageView
                                android:id="@+id/star"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="match_parent"
                                android:src="@drawable/ic_good_feedback"
                                android:layout_marginBottom="@dimen/four"
                                android:contentDescription="@string/favorite" />

                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:weightSum="3"
                            android:gravity="center_horizontal">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/showReleaseDateTextView"
                                android:layout_weight="1"
                                android:textAlignment="center"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:textSize="@dimen/ten"
                                tools:text="@string/date" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/showGenreTextView"
                                android:layout_weight="1"
                                android:textAlignment="center"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:textSize="@dimen/ten"
                                tools:text="Drama" />


                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/showRatingTextView"
                                android:layout_weight="1"
                                android:textAlignment="center"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:textSize="@dimen/ten"
                                tools:text="7.2" />

                        </TableRow>
                    </TableLayout>

                    <View
                        android:id="@+id/lineTwo"
                        android:layout_width="match_parent"
                        android:layout_height="0.1dp"
                        android:layout_marginTop="@dimen/margin_sixteen"
                        android:background="@android:color/darker_gray"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/overview"
                        android:layout_weight="1"
                        android:textAlignment="textStart"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:textSize="@dimen/desc_text_size"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="@dimen/margin_eight"
                        android:layout_marginTop="@dimen/margin_sixteen"
                        android:text="@string/overview" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/showDescTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_eight"
                        android:textAlignment="textStart"
                        android:layout_marginStart="@dimen/margin_eight"
                        android:layout_marginEnd="@dimen/margin_eight"
                        android:layout_marginBottom="@dimen/section25"
                        android:lineSpacingExtra="@dimen/four"
                        android:textSize="@dimen/desc_text_size_detail"
                        tools:text="@string/subtitle"/>

                    <TextView
                        android:id="@+id/seasonsTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:lines="1"
                        android:text="@string/seasons"
                        android:textSize="@dimen/desc_text_size"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginStart="@dimen/margin_eight"
                        app:layout_constraintTop_toBottomOf="@+id/showDescriptionSection" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_view_seasons"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="@dimen/margin_eight"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintTop_toBottomOf="@id/seasonsTitle"
                        tools:listitem="@layout/season_item"/>

                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/playShowsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:src="@drawable/ic_baseline_play_arrow_24"
        app:layout_anchor="@id/sectionA"
        app:backgroundTint="@color/red"
        app:layout_anchorGravity="bottom|right|end"
        android:contentDescription="@string/video_trailer_button" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>