<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentDescription"
    android:theme="@style/AppTheme"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="50dp"
        app:cardCornerRadius="0dp"
        app:cardElevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/DescriptionSection">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
            android:visibility="visible"
            android:id="@+id/descImageView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/desc_image"
            android:scaleType="centerCrop"
            android:contentDescription="@string/movie_cover"
            tools:src="@drawable/ticket"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/button_bookmark"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/ten"
            android:layout_marginTop="@dimen/ten"
            android:layout_marginEnd="@dimen/ten"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_bookmark"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

        <LinearLayout
            android:visibility="visible"
            android:id="@+id/DescriptionSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/descTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Gone Girl"
        android:textAllCaps="true"
        android:layout_marginTop="@dimen/margin_sixteen"
        android:layout_marginStart="@dimen/margin_eight"
        android:paddingBottom="@dimen/desc_text_size"
        android:textSize="30sp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/descTaglineTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/tagline"
            android:layout_marginStart="@dimen/margin_eight"
            android:layout_marginBottom="@dimen/margin_sixteen"
            android:textAllCaps="true"
            android:paddingBottom="@dimen/margin_sixteen"
            android:textStyle="bold|italic"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@android:color/darker_gray"/>

        <TableLayout
            android:id="@+id/table"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/margin_sixteen"
            android:layout_height="wrap_content">

        <TableRow
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:gravity="center_horizontal">


            <ImageView
                android:id="@+id/releaseDateTitle"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:src="@drawable/ic_baseline_av_timer_24"
                android:contentDescription="@string/release_date_icon" />

            <ImageView
                android:id="@+id/genreTextView"
                android:textAlignment="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:src="@drawable/ic_baseline_local_movies_24"
                android:contentDescription="@string/genre_icon" />

            <ImageView
                android:id="@+id/star"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:src="@drawable/ic_baseline_star_24"
                app:layout_constraintBottom_toBottomOf="@id/descRatingTextView"
                app:layout_constraintEnd_toStartOf="@+id/descRatingTextView"
                app:layout_constraintTop_toBottomOf="@+id/releaseDateTextView"
                android:contentDescription="@string/favorite" />

        </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:gravity="center_horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/releaseDateTextView"
                android:layout_weight="1"
                android:textAlignment="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="@dimen/year_text_size"
                tools:text="@string/date" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/descGenreTextView"
                android:layout_weight="1"
                android:textAlignment="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="@dimen/year_text_size"
                tools:text="Drama" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/descRatingTextView"
                android:layout_weight="1"
                android:textAlignment="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="@dimen/year_text_size"
                tools:text="7.2" />

            </TableRow>
        </TableLayout>

        <View
            android:id="@+id/lineTwo"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginTop="@dimen/margin_sixteen"
            android:background="@android:color/darker_gray"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/overview"
            android:layout_weight="1"
            android:textAlignment="textStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/desc_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/margin_eight"
            android:layout_marginTop="@dimen/margin_sixteen"
            android:text="@string/overview" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/descDescTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_sixteen"
        android:textAlignment="textStart"
        android:layout_marginStart="@dimen/margin_eight"
        android:layout_marginEnd="@dimen/margin_eight"
        android:layout_marginBottom="@dimen/section25"
        android:lineSpacingExtra="@dimen/four"
        android:textSize="@dimen/desc_text_size_detail"
        tools:text="@string/subtitle"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/your_notes"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_toStartOf="@id/tvText"
                    android:background="@color/light_grey"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:layout_toEndOf="@id/tvText"
                    android:background="@color/light_grey"
                    />

            </RelativeLayout>

        <TextView
            android:id="@+id/noteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            android:layout_marginStart="@dimen/margin_eight"
            android:layout_marginEnd="@dimen/margin_eight"
            android:layout_marginTop="@dimen/margin_eight"
            android:paddingBottom="@dimen/section25"
            app:layout_constraintTop_toBottomOf="@id/yourNotes"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/inputLinear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@id/card"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@id/layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="filled"
                app:boxBackgroundColor="@color/white"
                android:layout_marginStart="@dimen/margin_eight"
                android:layout_marginEnd="@dimen/margin_eight">


                <EditText
                    android:id="@+id/noteEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_note_here"
                    android:importantForAutofill="no"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>